--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,7 +12,8 @@ AllCops:
     - 'app/admin/auth/*'
     - 'spec/rails_helper.rb'
     - 'spec/spec_helper.rb'
-    - 'app/dashboards/post_dashboard.rb'
+    - 'app/dashboards/*'
+    - 'app/fields/*'
 
 Style/Documentation:
   Enabled: false
