--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,8 +12,7 @@ AllCops:
     - 'app/admin/auth/*'
     - 'spec/rails_helper.rb'
     - 'spec/spec_helper.rb'
-    - 'app/dashboards/*'
-    - 'app/fields/*'
+    - 'app/avo/resources/*'
 
 Style/Documentation:
   Enabled: false
