--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,5 +11,5 @@ digitalocean:
   endpoint: https://nyc3.digitaloceanspaces.com
   access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret_access_key) %>
-  bucket: <%= Rails.application.credentials.dig(:digitalocean, :bucket_name) %>
+  bucket: <%= ENV['BUCKET_NAME'] %>
   region: unused
