--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,10 +6,9 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-digitalocean:
+amazon:
   service: S3
-  endpoint: https://nyc3.digitaloceanspaces.com
-  access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret_access_key) %>
-  bucket: <%= ENV['BUCKET_NAME'] %>
-  region: unused
+  access_key_id: ENV['AWS_S3_ACCESS_KEY']
+  secret_access_key: ENV['AWS_S3_SECRET_KEY']
+  region: ENV['AWS_S3_REGION']
+  bucket: ENV['AWS_S3_BUCKET_NAME']
