--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,7 @@ local:
 
 amazon:
   service: S3
-  access_key_id: ENV['AWS_S3_ACCESS_KEY']
-  secret_access_key: ENV['AWS_S3_SECRET_KEY']
-  region: ENV['AWS_S3_REGION']
-  bucket: ENV['AWS_S3_BUCKET_NAME']
+  access_key_id: <%= ENV['AWS_S3_ACCESS_KEY'] %>
+  secret_access_key: <%= ENV['AWS_S3_SECRET_KEY'] %>
+  region: <%= ENV['AWS_S3_REGION'] %>
+  bucket: <%= ENV['AWS_S3_BUCKET_NAME'] %>
